Fix like-button display gap

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -392,9 +392,9 @@ body {
 }
 
 /*-----------------like_button----------------*/
-div>span.like>span.like {
-  margin: -10px 0;
-}
+// div>span.like>span.like {
+//   margin: -10px 0;
+// }
 
 
 div.timestamp-and-like {
